[package]
name = "jobs-backend"
version = "0.0.1"
authors = ["zzy <ask@rusthub.org>"]
edition = "2021"

[dependencies]
futures = "0.3"
async-std = { path = "../../../crates/async-std", features = ["attributes"] }
tide = { path = "../../../crates/tide", features = ["logger"] }

dotenv = "0.15"
lazy_static = "1.4"
femme = "2.2"

async-graphql = { version = "5.0", features = ["bson", "chrono"] }
mongodb = { version = "2.3", default-features = false, features = [
  "async-std-runtime",
] }

regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
jsonwebtoken = "8.2"
ring = "0.16"
base64 = "0.21"

deunicode = "1.3"
pulldown-cmark = { version = "0.9", default-features = false, features = [
  "simd",
] }
