[package]
name = "piexue-frontend"
version = "0.0.1"
authors = ["zzy <ask@rusthub.org>"]
edition = "2021"

[dependencies]
async-std = { path = "../../../crates/async-std", features = ["attributes"] }
tide = { path = "../../../crates/tide", features = ["logger", "cookies"] }

dotenv = "0.15"
lazy_static = "1.4"
femme = "2.2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

surf = "2.3"
graphql_client = "0.12"
handlebars = { version = "4.3", features = ["script_helper"] }

percent-encoding = "2.2"
lettre = "0.10"
fluent-bundle = "0.15"

[dev-dependencies]
rhai = "1.12"
kv-log-macro = "1.0"
